--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -32,7 +32,7 @@
     <tr>
 
       <% @cart_items.each do |cart_item| %>
-        <td><%= cart_item.item.name %></td>
+        <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %></td>
         <td>¥<%= cart_item.item.with_tax_price %></td>
         <td>
         <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
