--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -23,7 +23,8 @@
   <tbody>
     <% @cart_items.each do |cart_item| %>
       <tr>
-        <td><%= cart_item.item.name %></td>
+        <td><%= image_tag cart_item.item.image, size: "50x50" %>
+        <%= cart_item.item.name %></td>
         <td>¥<%= cart_item.item.with_tax_price %></td>
         <td><%= cart_item.amount %></td>
         <td>¥<%= cart_item.subtotal %></td>
