--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -10,7 +10,7 @@
   <div class="row mt-3 justify-content-center">
     <div class="col-4">
 
-  <%= image_tag @item.image %>
+  <%= image_tag @item.image, size: '200x200' %>
   </div>
 
 
