--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -20,7 +20,7 @@
 
 
         <div class="mb-5">
-        <div>¥<%= @item.price %>(税込み)</div>
+        <div>¥<%= @item.with_tax_price %>(税込み)</div>
         </div>
 
 
