--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,36 +1,28 @@
 
 <%= form_with model: @cart_item, url: public_cart_items_path do |f| %>
 
-<div class="container justify-content-center ">
+<div class="container justify-content-center">
     <div class="row">
       <div class="col-4">
-<%= image_tag @item.image, size: '200x200' %>
+        <%= image_tag @item.image, size: '200x200' %>
       </div>
 
     <div class="col-3">
-      <div class="mt-5 mb-5">
-
-        <div><%= @item.name %></div>
+      <div class="mt-5 mb-3">
+        <h2><%= @item.name %></h2>
+      </div>
+        <div class="mb-3">
+          <h5><%= @item.introduction %></h5>
         </div>
-
-        <div class="mb-5">
-
-        <div><%= @item.introduction %></div>
+        <div class="mb-3">
+          <strong>¥<%= @item.with_tax_price %>(税込み)</strong>
         </div>
+          <div><%= f.select :amount, *[1..10], { include_blank: '個数選択' }%></div>
 
+          <%= f.hidden_field :item_id, :value => @item.id %>
 
-        <div class="mb-5">
-        <div>¥<%= @item.with_tax_price %>(税込み)</div>
-        </div>
-
-
-
-  <div><%= f.select :amount, *[1..10] %></div>
-
-    <%= f.hidden_field :item_id, :value => @item.id %>
-
-<div class="containerer">
-    <div class="row mt-5">
+  <div class="containerer justify-content-center">
+    <div class="row mt-3">
         <%= f.submit "カートに入れる", class: "btn btn-success" %>
     </div>
   </div>
