--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -12,35 +12,35 @@
 
     <div class="row mb-3">
       <div class="col-3"><%= f.label :名前 %></div>
-      <div class="col-mr-2"><%= f.text_field :last_name %></div>
-      <div class="col-4"><%= f.text_field :first_name %></div>
+      <div class="col-mr-2"><%= f.text_field :last_name, placeholder: "山田" %></div>
+      <div class="col-4"><%= f.text_field :first_name, placeholder: "太郎" %></div>
     </div>
 
   <div class="row mb-3">
     <div class="col-3"><%= f.label :フリガナ %></div>
-      <div class="col-mr-2"><%= f.text_field :last_name_kana %></div>
-      <div class="col-3"><%= f.text_field :first_name_kana %></div>
+      <div class="col-mr-2"><%= f.text_field :last_name_kana, placeholder: "ヤマダ" %></div>
+      <div class="col-3"><%= f.text_field :first_name_kana, placeholder: "タロウ" %></div>
     </div>
 
 
 <div class="row mb-3">
     <div class="col-3"><%= f.label :メールアドレス %></div>
-    <div class="col-mr-2"><%= f.email_field :email, autofocus: true, autocomplete: "email" %></div>
+    <div class="col-mr-2"><%= f.email_field :email, autofocus: true, placeholder: "sample@example.com" %></div>
   </div>
 
 <div class="row mb-3">
   <div class="col-3"><%= f.label :郵便番号 %></div>
-  <div class="col-mr-2"><%= f.text_field :postal_code %></div>
+  <div class="col-mr-2"><%= f.text_field :postal_code, placeholder: "111111" %></div>
 </div>
 
 <div class="row mb-3">
   <div class="col-3"><%= f.label :住所 %></div>
-  <div class="col-mr-2"><%= f.text_field :address %></div>
+  <div class="col-mr-2"><%= f.text_field :address, placeholder: "東京都千代田区" %></div>
 </div>
 
 <div class="row mb-3">
   <div class="col-3"><%= f.label :電話番号 %></div>
-  <div class="col-mr-2"><%= f.text_field :telephone_number %></div>
+  <div class="col-mr-2"><%= f.text_field :telephone_number, placeholder: "090000000" %></div>
 </div>
 
 
