[Add]見やすく調整

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -30,10 +30,11 @@
       <% end %>
       <td><%= total %></td>
       <td><%= order.status_i18n %></td>
-
     </tr>
     <% end %>
   </tbody>
   </table>
+
+  </div>
 
 <%= paginate @orders %>
