--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -3,13 +3,13 @@
   <div class="container text-center">
     <div class="row">
       <div class="p-3 mb-2 bg-secondary text-light">商品編集</div>
-　　</div>
+    </div>
 
 
 <%= form_with model: @item, url: admin_item_path do |f| %>
 
 
-  <div class="container">
+
     <div class="row justify-content-center">
       <div class="col-2">
         商品画像
@@ -18,25 +18,25 @@
         <%= f.file_field :image, accept: "image/*" %>
       </div>
     </div>
-  </div>
 
 
 
 
-  <div class="container">
+
+
     <div class="row mt-3 justify-content-center">
       <div class="col-2">
         商品名
       </div>
       <div class="col-2">
-      <%= f.text_field :name, placeholder: "商品名" %>
+        <%= f.text_field :name, placeholder: "商品名" %>
       </div>
     </div>
 
 
 
 
-  <div class="container">
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         商品説明
@@ -44,49 +44,55 @@
       <div class="col-2">
         <%= f.text_area :introduction, placeholder: "ここに説明文を記述します"%>
       </div>
+    </div>
 
 
-  <div class="container">
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         ジャンル
       </div>
       <div class="col-2">
-      <%= f.collection_select :genre_id, Genre.all, :id, :name, {include_blank: '--選択してください--'}, class: 'sample' %>
+        <%= f.collection_select :genre_id, Genre.all, :id, :name, {include_blank: '--選択してください--'}, class: 'sample' %>
       </div>
+    </div>
 
 
-  <div class="container">
+
     <div class="row mt-2 justify-content-center">
       <div class="col-2">
         税抜価格
       </div>
       <div class="col-2">
-      <%= f.text_field :price, placeholder: "1000"%>
+        <%= f.text_field :price, placeholder: "1000"%>
       </div>
+    </div>
 
-      <div class="container">
+
       <div class="row mt-2 justify-content-center">
-      <div class="col-2">
-        販売ステータス
+        <div class="col-2">
+          販売ステータス
+        </div>
+        <div><%= f.radio_button :is_active, :true %></div>
+        <div><%= f.label :is_active, "販売中" %></div>
+
+        <div><%= f.radio_button :is_active, :false %></div>
+        <div><%= f.label :is_active, "販売停止中" %></div>
       </div>
 
-      <div><%= f.radio_button :is_active, :true %></div>
-      <div><%= f.label :is_active, "販売中" %><br /></div>
-
-      <div><%= f.radio_button :is_active, :false %></div>
-      <div><%= f.label :is_active, "販売停止中" %><br /></div>
 
 
 
-    <div class="container">
+
+
       <div class="row mt-2 justify-content-center">
       <div class="col">
+        <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
+      </div>
+      </div>
 
-      <div><%= f.submit "変更を保存", class: "btn btn-success" %></div>
       <% end %>
 
-      </div>
-      </div>
+
     </div>
 
