--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -8,6 +8,7 @@
   <%= form_with model: @address, url: public_addresses_path do |f| %>
 
   <div class="container">
+
     <div class="row mt-3">
       <div class="col-3">
         郵便番号(ハイフンなし)
@@ -15,9 +16,10 @@
       <div class="col-2">
       <%= f.text_field :postal_code, placeholder: "000000" %>
       </div>
+    </div>
 
 
-  <div class="container">
+
     <div class="row mt-3">
       <div class="col-3">
         住所
@@ -25,22 +27,19 @@
       <div class="col-2">
       <%= f.text_field :address, placeholder: "東京都千代田区" %>
       </div>
+    </div>
 
 
-  <div class="container">
     <div class="row mt-3">
       <div class="col-3">
         宛名
       </div>
       <div class="col-3">
-      <%= f.text_field :name %>
-
-      <%= f.hidden_field :customer_id, :value => current_customer.id %>
-
-
+        <%= f.text_field :name %>
+        <%= f.hidden_field :customer_id, :value => current_customer.id %>
       </div>
       <div class="col-3">
-      <%= f.submit "新規登録", class: "btn btn-success" %>
+        <%= f.submit "新規登録", class: "btn btn-success" %>
     </div>
   </div>
 
@@ -78,8 +77,7 @@
       <% end %>
     </tbody>
 
-
-</table>
+    </table>
   </div>
 </div>
 
