--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -7,6 +7,7 @@
 
 
 
+
   <table border="1" style="border-collapse: collapse">
     <thead>
       <tr>
@@ -65,6 +66,8 @@
 </div>
 
 
-<% if !@cart_items.blank? %>
-<td><%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-warning btn-sm" %></td>
-<% end %>
+  <% if !@cart_items.blank? %>
+    <td><%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-warning btn-sm" %></td>
+  <% end %>
+
+  </div>
